--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.4.2"
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "react-router-dom": "^6.4.2",
+    "tailwindcss": "^3.2.1"
   }
 }
