--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "chromatic": "npx chromatic --project-token=370372a34dc2"
+    "chromatic": "npx chromatic --project-token=370372a34dc2",
+    "cy:open": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -67,6 +68,9 @@
     "autoprefixer": "^10.4.12",
     "babel-plugin-named-exports-order": "^0.0.2",
     "chromatic": "^6.10.5",
+    "cypress": "^10.10.0",
+    "cypress-plugin-snapshots": "^1.4.4",
+    "cypress-visual-regression": "^1.7.0",
     "postcss": "^8.4.18",
     "prop-types": "^15.8.1",
     "react-router-dom": "^6.4.2",
